LoyaltyApp/force-app/main/default/objects/Loyalty_Reward_Value__c/Loyalty_Reward_Value__c.object-meta.xml
<CustomObject>
    <label>Loyalty Reward Value</label>
    <nameField>
        <label>Loyalty Reward Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Reward Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>