LoyaltyApp/force-app/main/default/objects/Loyalty_Reward_Value__c/fields/Is_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Is_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the reward is already delivered to the customer</description>
    <label>Is Delivered</label>
    <type>Checkbox</type>
</CustomField>