LoyaltyApp/force-app/main/default/objects/Loyalty_Reward_Value__c/fields/Loyalty_Reward__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Reward__c</fullName>
    <label>Loyalty Reward</label>
    <referenceTo>Loyalty_Reward__c</referenceTo>
    <relationshipLabel>Loyalty Reward Values</relationshipLabel>
    <relationshipName>Loyalty_Reward_Values</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>