LoyaltyApp/force-app/main/default/objects/Loyalty_Reward_Value__c/fields/Loyalty_Reward_Value_Code__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Reward_Value_Code__c</fullName>
    <displayFormat>REWARDVALUE-{0000}</displayFormat>
    <label>Loyalty Reward Value Code</label>
    <type>AutoNumber</type>
</CustomField>