LoyaltyApp/force-app/main/default/objects/Loyalty_Reward_Value__c/fields/Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>Reward_Type__c</fullName>
    <description>Type of reward</description>
    <label>Reward Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Benefit</fullName>
                <default>true</default>
                <label>Benefit</label>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>